examples/m17/invalid-and-incomplete-proof/over-qualified-port.athena
system OverQualifiedPort {
  port Cabinet.PLC1.out {
    direction out
  }
}
